[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "easy-llm-tools"
version = "0.1.0"
description = "Lightweight tool discovery and execution helpers for LLM tool modules"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []